src/tests/testfiles/binary-operators/8.txt
testfiles/binary-operators/8.c:2:9: error: invalid operands to comparison '>=' (have 'char' and 'char *')
'a' >= "B";
    ^
